fix: fix horizontal scroll

--- a/coffee-house/sass/base/_base.scss
+++ b/coffee-house/sass/base/_base.scss
@@ -77,7 +77,20 @@ h3 {
   margin: 0;
 }
 
-@media screen and (max-width: 380px) {
+
+@media screen and (max-width: 700px) {
+  h1 {
+    font-size: 50px;
+    line-height: 115%;
+  }
+
+  h2 {
+    font-size: 40px;
+  }
+}
+
+
+@media screen and (max-width: 450px) {
   h1 {
     font-size: 42px;
     line-height: 115%;
