--- a/coffee-house/sass/components/_enjoy.scss
+++ b/coffee-house/sass/components/_enjoy.scss
@@ -77,8 +77,16 @@
   }
 }
 
+@media screen and (max-width: 700px) {
+  .container {
+    width: 100%;
+  }
+ }
+
+
 @media screen and (max-width: 380px) {
   .enjoy__offer {
     padding: 59.5px 16px;
   }
 }
+
