--- a/coffee-house/sass/components/_favourites-coffee.scss
+++ b/coffee-house/sass/components/_favourites-coffee.scss
@@ -101,6 +101,25 @@
   background:$color-border-dark;
 }
 
+
+@media screen and (max-width: 1400px) {
+  .favourites-coffee__carousels {
+    gap:225px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .favourites-coffee__carousels {
+    gap:155px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .favourites-coffee__carousels {
+    gap:55px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .favourites-coffee__carousels {
     gap:45px;
@@ -108,6 +127,17 @@
   .favourites-coffe__text {
     text-align: center;
   }
+}
+
+@media screen and (max-width: 760px) {
+  .carousels__left-button,
+  .carousels__right-button {
+    display: none;
+  }
+  .container {
+    width: 100%;
+    margin: 0 auto;
+}
 }
 
 
@@ -120,3 +150,4 @@
     gap:17px;
   }
 }
+
