--- a/coffee-house/sass/layouts/_header.scss
+++ b/coffee-house/sass/layouts/_header.scss
@@ -113,6 +113,5 @@
   }
   .hamburger__button  {
     margin-bottom: 7px;
-    margin-right: -1px;
   }
 }
