--- a/coffee-house/sass/layouts/_menu.scss
+++ b/coffee-house/sass/layouts/_menu.scss
@@ -25,7 +25,7 @@
   flex-direction: column;
   gap: 39px;
   align-items:center;
-  padding: 0px 40px;
+  margin: 0px 40px;
 }
 
 .menu___tabs {
@@ -169,7 +169,7 @@ flex-wrap: wrap;
     display: none;
   }
   .menu {
-    padding: 0px 10px;
+    margin: 0px 10px;
   }
   .gallery__item-nodisplay {
     display: none;
